Change Media Managed stat to 25+ Clients

--- a/index.html
+++ b/index.html
@@ -2736,8 +2736,8 @@
           <span class="about__stat-label">Years Strong</span>
         </div>
         <div class="about__stat">
-          <span class="about__stat-number">$500M+</span>
-          <span class="about__stat-label">Media Managed</span>
+          <span class="about__stat-number">25+</span>
+          <span class="about__stat-label">Clients</span>
         </div>
         <div class="about__stat">
           <span class="about__stat-number">150+</span>
