--- a/index.html
+++ b/index.html
@@ -2705,14 +2705,14 @@
       <div class="about__narrative fade-in">
         <span class="theory__tagline">About</span>
         <h2 class="theory__title">
-          Experienced marketers driving growth, with technology scaling their impact.
+          Our people and technology are designed to work as a system.
         </h2>
         <div class="about__copy">
           <p>
             Our founders spent decades at the world's largest agencies. They saw technology create fragmentation instead of clarity. So they built Tandem around experts who understand how strategy, creative, media, and analytics actually drive growth. Clients stay because we deliver results, not theater.
           </p>
           <p>
-            <strong>Our people and our technology are designed to work as a system.</strong> Not technology replacing people. Not people ignoring technology. Strategic expertise and technical capability, each making the other more effective.
+            Not technology replacing people. Not people ignoring technology. Strategic expertise and technical capability, each making the other more effective.
           </p>
         </div>
       </div>
