--- a/index.html
+++ b/index.html
@@ -2422,6 +2422,11 @@
       margin-bottom: var(--space-6);
     }
 
+    .cta__setup--accent {
+      margin-top: var(--space-8);
+      margin-bottom: var(--space-4);
+    }
+
     .cta__headlines {
       display: flex;
       flex-direction: column;
@@ -3242,7 +3247,8 @@
         <p class="cta__setup">This is our guarantee.</p>
         <div class="cta__headlines">
           <p class="cta__headline cta__headline--primary">Spend the same money with us. <strong>Get 20% better results.</strong></p>
-          <p class="cta__headline cta__headline--accent">Interested? Tell us your top 5 problems. <strong>We'll solve one for free.</strong></p>
+          <p class="cta__setup cta__setup--accent">Interested?</p>
+          <p class="cta__headline cta__headline--accent">Tell us your top 5 problems. <strong>We'll solve one for free.</strong></p>
         </div>
         <a href="mailto:hello@tandemtheory.com" class="btn btn--primary btn--lg btn--cta">Let's Talk</a>
       </div>
