Move separator line above INTERESTED?

--- a/index.html
+++ b/index.html
@@ -2422,10 +2422,6 @@
       margin-bottom: var(--space-6);
     }
 
-    .cta__setup--accent {
-      margin-top: var(--space-8);
-      margin-bottom: var(--space-4);
-    }
 
     .cta__headlines {
       display: flex;
@@ -2447,12 +2443,17 @@
     }
 
     .cta__headline--accent {
-      position: relative;
-      padding-top: var(--space-6);
       margin-top: var(--space-2);
     }
 
-    .cta__headline--accent::before {
+    .cta__setup--accent {
+      position: relative;
+      margin-top: var(--space-8);
+      margin-bottom: var(--space-4);
+      padding-top: var(--space-6);
+    }
+
+    .cta__setup--accent::before {
       content: '';
       position: absolute;
       top: 0;
