Fix Technology section ID to match nav link

--- a/index.html
+++ b/index.html
@@ -2778,7 +2778,7 @@
   </section>
 
   <!-- ====== TECHNOLOGY ====== -->
-  <section class="section section--dark" id="platform-v2">
+  <section class="section section--dark" id="platform">
     <div class="container">
       <div class="section__header fade-in">
         <span class="section__label">Technology</span>
