Add Technology V1 back below V2 for comparison

--- a/index.html
+++ b/index.html
@@ -2781,7 +2781,7 @@
   <section class="section section--dark" id="platform">
     <div class="container">
       <div class="section__header fade-in">
-        <span class="section__label">Technology</span>
+        <span class="section__label">Technology V2</span>
         <h2 class="section__title">Marketing Intelligence at Your Command</h2>
         <p class="section__subtitle">
           Your platforms generate data. Our technology turns it into competitive advantage.
@@ -3054,7 +3054,221 @@
 
     </div>
   </section>
-  <!-- ====== END TECHNOLOGY ====== -->
+  <!-- ====== END TECHNOLOGY V2 ====== -->
+
+  <!-- ====== TECHNOLOGY V1 (ORIGINAL DESIGN) ====== -->
+  <section class="section section--dark" id="platform-v1">
+    <div class="container">
+      <div class="section__header fade-in">
+        <span class="section__label">Technology V1</span>
+        <h2 class="section__title">Proprietary Tools That Empower Our Experts</h2>
+        <p class="section__subtitle">
+          Every tool exists because we hit a real problem with enterprise clients—and built the solution. Media tracking that broke when cookies went away. Landing pages that took weeks to test. Attribution that couldn't keep up. Search optimization that had to shift from SEO to GEO. Built by marketers, for marketers.
+        </p>
+      </div>
+
+      <div class="platform__grid">
+        <!-- EDWARD - Featured Tool -->
+        <div class="tool-card tool-card--featured fade-in">
+          <div class="tool-card__content">
+            <div class="tool-card__icon">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 2a4 4 0 0 1 4 4v2a4 4 0 0 1-8 0V6a4 4 0 0 1 4-4z"/>
+                <path d="M16 14v1a4 4 0 0 1-8 0v-1"/>
+                <circle cx="12" cy="21" r="1"/>
+                <path d="M9 21h6"/>
+                <path d="M12 17v4"/>
+              </svg>
+            </div>
+            <div class="tool-card__name">EDWARD</div>
+            <div class="tool-card__category">AI Operations Platform</div>
+            <p class="tool-card__description">
+              Get deeper analysis, faster execution, and more strategic thinking on every engagement. 150+ AI agents amplify what our experts deliver for you.
+            </p>
+            <div class="tool-card__human-note">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                <circle cx="9" cy="7" r="4"/>
+                <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+              </svg>
+              <span>AI amplifies human expertise - you get both</span>
+            </div>
+          </div>
+          <div class="tool-card__visual">
+            <div class="agent-grid">
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+              <div class="agent-dot"></div>
+              <div class="agent-dot active"></div>
+            </div>
+            <div class="agent-counter">
+              <div class="agent-counter__number">150+</div>
+              <div class="agent-counter__label">AI Agents Working For You</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- BEAM -->
+        <div class="tool-card fade-in stagger-1">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="12" cy="12" r="10"/>
+              <path d="M2 12h20M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">BEAM</div>
+          <div class="tool-card__category">Attribution Engine</div>
+          <p class="tool-card__description">
+            Know exactly what's driving conversions even as cookies disappear. Clean attribution data means smarter budget allocation and better ROI.
+          </p>
+        </div>
+
+        <!-- Inspect -->
+        <div class="tool-card fade-in stagger-2">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="11" cy="11" r="8"/>
+              <path d="M21 21l-4.35-4.35"/>
+              <path d="M11 8v6M8 11h6"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">Inspect</div>
+          <div class="tool-card__category">Media QC</div>
+          <p class="tool-card__description">
+            Stop losing money to broken links and landing page errors. Automated monitoring catches problems before they cost you conversions.
+          </p>
+        </div>
+
+        <!-- Edison -->
+        <div class="tool-card fade-in stagger-3">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M9 18V5l12-2v13"/>
+              <circle cx="6" cy="18" r="3"/>
+              <circle cx="18" cy="16" r="3"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">Edison</div>
+          <div class="tool-card__category">Landing Pages</div>
+          <p class="tool-card__description">
+            Launch and test landing pages in days, not weeks. AI-optimized layouts mean faster time-to-market and more winning variations.
+          </p>
+        </div>
+
+        <!-- Missing-Link -->
+        <div class="tool-card fade-in stagger-1">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"/>
+              <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">Missing-Link</div>
+          <div class="tool-card__category">GEO Platform</div>
+          <p class="tool-card__description">
+            Get cited correctly by ChatGPT, Perplexity, and Claude. Control your brand narrative in the AI search era with machine-readable entity data.
+          </p>
+        </div>
+
+        <!-- Sentinel -->
+        <div class="tool-card fade-in stagger-2">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
+              <path d="M9 12l2 2 4-4"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">Sentinel</div>
+          <div class="tool-card__category">Search Intelligence</div>
+          <p class="tool-card__description">
+            Know exactly where you rank for every target keyword, updated continuously. No more stale reports or manual tracking.
+          </p>
+        </div>
+
+        <!-- Recon -->
+        <div class="tool-card fade-in stagger-3">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+              <circle cx="12" cy="12" r="3"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">Recon</div>
+          <div class="tool-card__category">Competitive Intel</div>
+          <p class="tool-card__description">
+            See exactly what competitors are doing with their page structure, tagging, and tech stack. Actionable intelligence, not just screenshots.
+          </p>
+        </div>
+
+        <!-- Pulse -->
+        <div class="tool-card fade-in stagger-1">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M22 12h-4l-3 9L9 3l-3 9H2"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">Pulse</div>
+          <div class="tool-card__category">Email Intel</div>
+          <p class="tool-card__description">
+            Know what competitors are sending before your customers see it. Benchmark and outperform in the inbox.
+          </p>
+        </div>
+
+        <!-- FMT -->
+        <div class="tool-card fade-in stagger-2">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+              <circle cx="12" cy="10" r="3"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">FMT</div>
+          <div class="tool-card__category">Field Marketing</div>
+          <p class="tool-card__description">
+            Empower 1,000+ franchise locations with on-brand marketing they can customize. Scale nationally without sacrificing local relevance.
+          </p>
+        </div>
+
+        <!-- DCO -->
+        <div class="tool-card fade-in stagger-3">
+          <div class="tool-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+              <path d="M12 8v8M8 12h8"/>
+            </svg>
+          </div>
+          <div class="tool-card__name">DCO</div>
+          <div class="tool-card__category">Dynamic Creative</div>
+          <p class="tool-card__description">
+            Serve the right creative to the right person at the right moment. 1:1 personalization that significantly lifts conversion and revenue.
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- ====== END TECHNOLOGY V1 ====== -->
 
   <!-- Capabilities Section -->
   <section class="section section--darker" id="capabilities">
