Update About section with new copy from boss

--- a/index.html
+++ b/index.html
@@ -2725,14 +2725,14 @@
       <div class="about__narrative fade-in">
         <span class="theory__tagline">About</span>
         <h2 class="theory__title">
-          Our people and technology are designed to work as a system.
+          People and Technology Working in Tandem
         </h2>
         <div class="about__copy">
           <p>
-            Our founders spent decades at the world's largest agencies. They saw technology create fragmentation instead of clarity. So they built Tandem around experts who understand how strategy, creative, media, and analytics actually drive growth. Clients stay because we deliver results, not theater.
+            Tandem Theory was founded by four agency veterans who saw other agencies increasingly allowing platforms and machine automation make decisions without human judgment guiding the way. Tandem Theory was created in response to that trend, with a clear belief: technology should amplify human thinking, not replace it.
           </p>
           <p>
-            Not technology replacing people. Not people ignoring technology. Strategic expertise and technical capability, each making the other more effective.
+            By pairing strategic insight, creativity, and human experience with powerful tools and technology, we help clients acquire, retain and grow lasting customer relationships.
           </p>
         </div>
       </div>
