Simplify About headline to 'Humans + Technology'

--- a/index.html
+++ b/index.html
@@ -2725,7 +2725,7 @@
       <div class="about__narrative fade-in">
         <span class="theory__tagline">About</span>
         <h2 class="theory__title">
-          People and Technology Working in Tandem
+          Humans + Technology
         </h2>
         <div class="about__copy">
           <p>
