Add team photo with sRGB color profile

--- a/index.html
+++ b/index.html
@@ -2907,7 +2907,7 @@
       <!-- Team Photo + CTA -->
       <div class="about__team fade-in">
         <div class="about__team-image">
-          <img src="photos/group-shot.png" alt="Tandem Theory team">
+          <img src="photos/pinstack-group-shot.png" alt="Tandem Theory team">
         </div>
         <div style="text-align: center; margin-top: var(--space-8);">
           <a href="https://www.paycomonline.net/v4/ats/web.php/portal/1BF7128E8603572A6E0C0B5C9F519B31/career-page" target="_blank" class="btn btn--outline">Join Our Team - View Open Positions</a>
