Add third photo strip between Results and Contact sections

--- a/index.html
+++ b/index.html
@@ -3440,6 +3440,32 @@
     </div>
   </section>
 
+  <!-- Photo Strip 3 -->
+  <div class="photo-strip photo-strip--ltr" aria-hidden="true">
+    <div class="photo-strip__track">
+      <img src="photos/strips/strip3-01.jpg" alt="">
+      <img src="photos/strips/strip3-02.jpg" alt="">
+      <img src="photos/strips/strip3-03.jpg" alt="">
+      <img src="photos/strips/strip3-04.jpg" alt="">
+      <img src="photos/strips/strip3-05.jpg" alt="">
+      <img src="photos/strips/strip3-06.jpg" alt="">
+      <img src="photos/strips/strip3-07.jpg" alt="">
+      <img src="photos/strips/strip3-08.jpg" alt="">
+      <img src="photos/strips/strip3-09.jpg" alt="">
+      <img src="photos/strips/strip3-10.jpg" alt="">
+      <img src="photos/strips/strip3-01.jpg" alt="">
+      <img src="photos/strips/strip3-02.jpg" alt="">
+      <img src="photos/strips/strip3-03.jpg" alt="">
+      <img src="photos/strips/strip3-04.jpg" alt="">
+      <img src="photos/strips/strip3-05.jpg" alt="">
+      <img src="photos/strips/strip3-06.jpg" alt="">
+      <img src="photos/strips/strip3-07.jpg" alt="">
+      <img src="photos/strips/strip3-08.jpg" alt="">
+      <img src="photos/strips/strip3-09.jpg" alt="">
+      <img src="photos/strips/strip3-10.jpg" alt="">
+    </div>
+  </div>
+
   <!-- CTA Section -->
   <section class="section section--darker cta" id="contact">
     <div class="container">
